--- a/mobile.html
+++ b/mobile.html
@@ -1,66 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bg">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#4CAF50">
-    <title>Правописни балони</title>
-    <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png">
+    <meta name="theme-color" content="#000000">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
+    <title>Balloon Pop</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-        
         html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
             height: 100%;
+            width: 100%;
             overflow: hidden;
-            position: fixed;
-            background: #000;
+            background-color: #000;
             touch-action: none;
-            -webkit-tap-highlight-color: transparent;
         }
-
         #game-container {
             width: 100%;
             height: 100%;
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             touch-action: none;
         }
-
-        canvas {
-            display: block;
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-
-        #rotate-prompt {
+        #rotation-prompt {
             display: none;
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.8);
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
             color: white;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
+            justify-content: center;
+            align-items: center;
             z-index: 1000;
             font-family: Arial, sans-serif;
-            font-size: 18px;
+            text-align: center;
+            padding: 20px;
         }
-
+        #rotation-prompt img {
+            width: 64px;
+            height: 64px;
+            margin-bottom: 10px;
+        }
         #install-prompt {
             display: none;
             position: fixed;
@@ -69,35 +60,69 @@
             transform: translateX(-50%);
             background: rgba(0, 0, 0, 0.8);
             color: white;
-            padding: 15px 20px;
+            padding: 12px 24px;
             border-radius: 8px;
-            text-align: center;
-            z-index: 1000;
             font-family: Arial, sans-serif;
-            font-size: 16px;
+            z-index: 1000;
+            text-align: center;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
         }
-
-        .fullscreen {
-            width: 100vw !important;
-            height: 100vh !important;
-            margin: 0 !important;
-            padding: 0 !important;
+        #install-prompt button {
+            background: #4CAF50;
+            border: none;
+            color: white;
+            padding: 8px 16px;
+            margin-left: 12px;
+            border-radius: 4px;
+            cursor: pointer;
         }
-
-        @media screen and (display-mode: fullscreen) {
+        @media (display-mode: standalone) {
             #install-prompt {
                 display: none !important;
             }
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
 </head>
 <body>
     <div id="game-container"></div>
-    <div id="rotate-prompt">За по-добро изживяване, моля завъртете телефона хоризонтално</div>
-    <div id="install-prompt">Инсталирайте приложението за по-добро изживяване</div>
-    <script type="module" src="/src/mobile.js"></script>
-    <script>
+    <div id="rotation-prompt">
+        <div>
+            <img src="assets/rotate-device.png" alt="Rotate device">
+            <p>Моля, завъртете устройството си в хоризонтално положение</p>
+        </div>
+    </div>
+    <div id="install-prompt">
+        <span>Инсталирайте играта за по-добро изживяване</span>
+        <button id="install-button">Инсталирай</button>
+    </div>
+
+    <script type="module">
+        import OrientationHandler from './src/orientation-handler.js';
+        
+        let deferredPrompt;
+        const orientationHandler = new OrientationHandler('game-container');
+        const rotationPrompt = document.getElementById('rotation-prompt');
+        const installPrompt = document.getElementById('install-prompt');
+        const installButton = document.getElementById('install-button');
+
+        // Handle PWA installation
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            deferredPrompt = e;
+            installPrompt.style.display = 'block';
+        });
+
+        installButton.addEventListener('click', async () => {
+            if (deferredPrompt) {
+                deferredPrompt.prompt();
+                const { outcome } = await deferredPrompt.userChoice;
+                if (outcome === 'accepted') {
+                    installPrompt.style.display = 'none';
+                }
+                deferredPrompt = null;
+            }
+        });
+
         // Register service worker
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
@@ -111,31 +136,27 @@
             });
         }
 
-        // Handle PWA install prompt
-        let deferredPrompt;
-        window.addEventListener('beforeinstallprompt', (e) => {
-            e.preventDefault();
-            deferredPrompt = e;
-            document.getElementById('install-prompt').style.display = 'block';
-        });
-
-        document.getElementById('install-prompt').addEventListener('click', (e) => {
-            if (deferredPrompt) {
-                deferredPrompt.prompt();
-                deferredPrompt.userChoice.then((choiceResult) => {
-                    if (choiceResult.outcome === 'accepted') {
-                        console.log('User accepted the install prompt');
-                    }
-                    deferredPrompt = null;
-                    document.getElementById('install-prompt').style.display = 'none';
-                });
+        // Handle rotation changes
+        window.addEventListener('resize', () => {
+            if (window.innerWidth > window.innerHeight) {
+                rotationPrompt.style.display = 'none';
+            } else {
+                rotationPrompt.style.display = 'flex';
             }
         });
 
-        // Hide install prompt when in standalone mode
-        if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) {
-            document.getElementById('install-prompt').style.display = 'none';
+        // Initial check
+        if (window.innerWidth > window.innerHeight) {
+            rotationPrompt.style.display = 'none';
+        } else {
+            rotationPrompt.style.display = 'flex';
         }
+
+        // Load the game script
+        const script = document.createElement('script');
+        script.src = 'dist/bundle.js';
+        script.type = 'module';
+        document.body.appendChild(script);
     </script>
 </body>
 </html> 
