--- a/mobile.html
+++ b/mobile.html
@@ -15,13 +15,22 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            touch-action: none;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
         html, body {
             height: 100%;
             width: 100%;
             overflow: hidden;
             background-color: #000;
+            position: fixed;
             touch-action: none;
+            -webkit-overflow-scrolling: none;
         }
         #game-container {
             width: 100%;
@@ -30,6 +39,10 @@
             top: 0;
             left: 0;
             touch-action: none;
+            -webkit-tap-highlight-color: transparent;
+        }
+        canvas {
+            touch-action: none !important;
         }
         #rotation-prompt {
             display: none;
@@ -46,6 +59,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 20px;
+            touch-action: none;
         }
         #rotation-prompt img {
             width: 64px;
@@ -66,6 +80,7 @@
             z-index: 1000;
             text-align: center;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+            touch-action: none;
         }
         #install-prompt button {
             background: #4CAF50;
@@ -75,6 +90,7 @@
             margin-left: 12px;
             border-radius: 4px;
             cursor: pointer;
+            touch-action: manipulation;
         }
         @media (display-mode: standalone) {
             #install-prompt {
@@ -97,6 +113,41 @@
     </div>
 
     <script type="module">
+        // Prevent default touch behaviors
+        document.addEventListener('touchmove', (e) => {
+            e.preventDefault();
+        }, { passive: false });
+
+        document.addEventListener('touchstart', (e) => {
+            if (e.target.nodeName !== 'BUTTON') {
+                e.preventDefault();
+            }
+        }, { passive: false });
+
+        // Prevent zoom on double tap
+        let lastTouchEnd = 0;
+        document.addEventListener('touchend', (e) => {
+            const now = Date.now();
+            if (now - lastTouchEnd <= 300) {
+                e.preventDefault();
+            }
+            lastTouchEnd = now;
+        }, { passive: false });
+
+        // Prevent scroll outside game container
+        document.body.addEventListener('scroll', (e) => {
+            e.preventDefault();
+        }, { passive: false });
+
+        // Lock orientation to landscape on supported devices
+        if (screen.orientation && screen.orientation.lock) {
+            try {
+                screen.orientation.lock('landscape');
+            } catch (err) {
+                console.log('Orientation lock not supported');
+            }
+        }
+
         import OrientationHandler from './src/orientation-handler.js';
         
         let deferredPrompt;
