--- a/mobile.html
+++ b/mobile.html
@@ -29,6 +29,7 @@
             width: 100%;
             overflow: hidden;
             overscroll-behavior: none;
+            background-color: #000;
         }
         body {
             height: 100%;
@@ -40,6 +41,9 @@
             -webkit-overflow-scrolling: none;
             overscroll-behavior: none;
             -webkit-overscroll-behavior: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         #game-container {
             width: 100%;
@@ -51,11 +55,20 @@
             -webkit-tap-highlight-color: transparent;
             overflow: hidden;
             overscroll-behavior: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         canvas {
             touch-action: none !important;
             position: absolute;
             overscroll-behavior: none;
+            max-width: 100vw !important;
+            max-height: 100vh !important;
+            width: auto !important;
+            height: auto !important;
+            margin: auto !important;
+            object-fit: contain !important;
         }
         #rotation-prompt {
             display: none;
@@ -95,6 +108,7 @@
             text-align: center;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
             touch-action: none;
+            pointer-events: auto;
         }
         #install-prompt button {
             background: #4CAF50;
@@ -127,6 +141,10 @@
     </div>
 
     <script type="module">
+        // Lock viewport
+        const viewport = document.querySelector('meta[name=viewport]');
+        viewport.setAttribute('content', viewport.content + ', maximum-scale=1.0, user-scalable=0');
+
         // Prevent ALL scroll events
         ['scroll', 'touchmove', 'wheel'].forEach((eventName) => {
             document.addEventListener(eventName, (e) => {
@@ -168,15 +186,20 @@
             }
         }
 
-        // Prevent elastic scrolling on iOS
-        document.body.style.position = 'fixed';
-        document.body.style.width = '100%';
-        document.body.style.height = '100%';
-        
-        // Additional iOS scroll prevention
-        document.ontouchmove = (e) => {
-            e.preventDefault();
-        };
+        // Handle resize events
+        function handleResize() {
+            const gameContainer = document.getElementById('game-container');
+            const canvas = gameContainer.querySelector('canvas');
+            if (canvas) {
+                canvas.style.maxWidth = window.innerWidth + 'px';
+                canvas.style.maxHeight = window.innerHeight + 'px';
+            }
+        }
+
+        window.addEventListener('resize', handleResize);
+        window.addEventListener('orientationchange', () => {
+            setTimeout(handleResize, 100);
+        });
 
         import OrientationHandler from './src/orientation-handler.js';
         
@@ -238,6 +261,9 @@
         script.src = 'dist/bundle.js';
         script.type = 'module';
         document.body.appendChild(script);
+
+        // Initial resize handling
+        setTimeout(handleResize, 100);
     </script>
 </body>
 </html> 
