--- a/mobile.html
+++ b/mobile.html
@@ -46,17 +46,21 @@
             -ms-touch-action: none;
             -webkit-overflow-scrolling: touch;
             overscroll-behavior: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         #game-container {
-            position: absolute;
-            top: 0;
-            left: 0;
+            position: relative;
             width: 100%;
             height: 100%;
             overflow: hidden;
             touch-action: none;
             -ms-touch-action: none;
             -webkit-tap-highlight-color: transparent;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         canvas {
             display: block;
@@ -66,6 +70,12 @@
             -webkit-user-select: none;
             -webkit-touch-callout: none;
             outline: none;
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+            margin: auto;
+            object-fit: contain;
         }
         #rotation-prompt {
             display: none;
