--- a/mobile.html
+++ b/mobile.html
@@ -46,21 +46,17 @@
             -ms-touch-action: none;
             -webkit-overflow-scrolling: touch;
             overscroll-behavior: none;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
         #game-container {
-            position: relative;
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             overflow: hidden;
             touch-action: none;
             -ms-touch-action: none;
             -webkit-tap-highlight-color: transparent;
-            display: flex;
-            align-items: center;
-            justify-content: center;
         }
         canvas {
             display: block;
@@ -70,12 +66,9 @@
             -webkit-user-select: none;
             -webkit-touch-callout: none;
             outline: none;
-            max-width: 100%;
-            max-height: 100%;
-            width: auto;
-            height: auto;
-            margin: auto;
-            object-fit: contain;
+            width: 100% !important;
+            height: 100% !important;
+            object-fit: cover;
         }
         #rotation-prompt {
             display: none;
@@ -156,6 +149,11 @@
         document.addEventListener('touchend', preventDefault, { passive: false });
         document.addEventListener('scroll', preventDefault, { passive: false });
         document.addEventListener('wheel', preventDefault, { passive: false });
+        
+        // Additional event prevention for iOS
+        document.addEventListener('gesturestart', preventDefault, { passive: false });
+        document.addEventListener('gesturechange', preventDefault, { passive: false });
+        document.addEventListener('gestureend', preventDefault, { passive: false });
 
         // Prevent zoom on double tap
         let lastTouchEnd = 0;
@@ -231,6 +229,18 @@
 
         // Initial orientation check
         checkOrientation();
+
+        // Ensure proper sizing on iOS
+        window.addEventListener('resize', () => {
+            document.body.style.height = window.innerHeight + 'px';
+            const gameContainer = document.getElementById('game-container');
+            gameContainer.style.height = window.innerHeight + 'px';
+        });
+
+        // Initial size set
+        document.body.style.height = window.innerHeight + 'px';
+        const gameContainer = document.getElementById('game-container');
+        gameContainer.style.height = window.innerHeight + 'px';
 
         // Load the game script
         const script = document.createElement('script');
