--- a/mobile.html
+++ b/mobile.html
@@ -24,51 +24,36 @@
             user-select: none;
             -webkit-tap-highlight-color: transparent;
         }
-        html {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            touch-action: none;
-            -ms-touch-action: none;
-            overscroll-behavior: none;
-            background: #000;
-        }
-        body {
-            position: fixed;
-            width: 100%;
-            height: 100%;
+        html, body {
             margin: 0;
             padding: 0;
-            overflow: hidden;
-            background: #000;
-            touch-action: none;
-            -ms-touch-action: none;
-            -webkit-overflow-scrolling: touch;
-            overscroll-behavior: none;
-        }
-        #game-container {
-            position: fixed;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
             overflow: hidden;
+            position: fixed;
+            background: #000;
             touch-action: none;
-            -ms-touch-action: none;
-            -webkit-tap-highlight-color: transparent;
+        }
+        #game-container {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
         }
         canvas {
             display: block;
-            touch-action: none !important;
-            -ms-touch-action: none !important;
-            user-select: none;
-            -webkit-user-select: none;
-            -webkit-touch-callout: none;
-            outline: none;
-            width: 100% !important;
-            height: 100% !important;
-            object-fit: cover;
+            margin: 0 auto;
+            touch-action: none;
+            max-width: 100vw;
+            max-height: 100vh;
+            width: auto !important;
+            height: auto !important;
+            object-fit: contain;
         }
         #rotation-prompt {
             display: none;
@@ -90,7 +75,6 @@
             width: 64px;
             height: 64px;
             margin-bottom: 10px;
-            pointer-events: none;
         }
         #install-prompt {
             display: none;
@@ -105,17 +89,6 @@
             font-family: Arial, sans-serif;
             z-index: 1000;
             text-align: center;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-        }
-        #install-prompt button {
-            background: #4CAF50;
-            border: none;
-            color: white;
-            padding: 8px 16px;
-            margin-left: 12px;
-            border-radius: 4px;
-            cursor: pointer;
-            touch-action: manipulation;
         }
         @media (display-mode: standalone) {
             #install-prompt {
@@ -138,24 +111,16 @@
     </div>
 
     <script type="module">
-        // Prevent default touch behaviors
         function preventDefault(e) {
             e.preventDefault();
         }
 
-        // Apply passive: false to critical events
         document.addEventListener('touchmove', preventDefault, { passive: false });
         document.addEventListener('touchstart', preventDefault, { passive: false });
         document.addEventListener('touchend', preventDefault, { passive: false });
         document.addEventListener('scroll', preventDefault, { passive: false });
         document.addEventListener('wheel', preventDefault, { passive: false });
-        
-        // Additional event prevention for iOS
-        document.addEventListener('gesturestart', preventDefault, { passive: false });
-        document.addEventListener('gesturechange', preventDefault, { passive: false });
-        document.addEventListener('gestureend', preventDefault, { passive: false });
 
-        // Prevent zoom on double tap
         let lastTouchEnd = 0;
         document.addEventListener('touchend', (e) => {
             const now = Date.now();
@@ -165,7 +130,6 @@
             lastTouchEnd = now;
         }, { passive: false });
 
-        // Lock orientation to landscape on supported devices
         if (screen.orientation && screen.orientation.lock) {
             try {
                 screen.orientation.lock('landscape');
@@ -176,13 +140,12 @@
 
         import OrientationHandler from './src/orientation-handler.js';
         
-        let deferredPrompt;
         const orientationHandler = new OrientationHandler('game-container');
         const rotationPrompt = document.getElementById('rotation-prompt');
         const installPrompt = document.getElementById('install-prompt');
         const installButton = document.getElementById('install-button');
+        let deferredPrompt;
 
-        // Handle PWA installation
         window.addEventListener('beforeinstallprompt', (e) => {
             e.preventDefault();
             deferredPrompt = e;
@@ -200,7 +163,6 @@
             }
         });
 
-        // Register service worker
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/sw.js')
@@ -213,7 +175,6 @@
             });
         }
 
-        // Handle rotation changes
         function checkOrientation() {
             if (window.innerWidth > window.innerHeight) {
                 rotationPrompt.style.display = 'none';
@@ -227,22 +188,8 @@
             setTimeout(checkOrientation, 100);
         });
 
-        // Initial orientation check
         checkOrientation();
 
-        // Ensure proper sizing on iOS
-        window.addEventListener('resize', () => {
-            document.body.style.height = window.innerHeight + 'px';
-            const gameContainer = document.getElementById('game-container');
-            gameContainer.style.height = window.innerHeight + 'px';
-        });
-
-        // Initial size set
-        document.body.style.height = window.innerHeight + 'px';
-        const gameContainer = document.getElementById('game-container');
-        gameContainer.style.height = window.innerHeight + 'px';
-
-        // Load the game script
         const script = document.createElement('script');
         script.src = 'dist/bundle.js';
         script.type = 'module';
