--- a/mobile.html
+++ b/mobile.html
@@ -32,28 +32,24 @@
             overflow: hidden;
             position: fixed;
             background: #000;
-            touch-action: none;
         }
         #game-container {
-            width: 100%;
-            height: 100%;
             position: absolute;
             top: 0;
             left: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            width: 100vw;
+            height: 100vh;
             overflow: hidden;
         }
         canvas {
-            display: block;
-            margin: 0 auto;
-            touch-action: none;
-            max-width: 100vw;
-            max-height: 100vh;
-            width: auto !important;
-            height: auto !important;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100% !important;
+            height: 100% !important;
             object-fit: contain;
+            touch-action: none;
         }
         #rotation-prompt {
             display: none;
@@ -138,6 +134,21 @@
             }
         }
 
+        // Ensure game container fills the screen
+        function updateGameContainer() {
+            const gameContainer = document.getElementById('game-container');
+            const canvas = document.querySelector('canvas');
+            if (canvas) {
+                canvas.style.width = window.innerWidth + 'px';
+                canvas.style.height = window.innerHeight + 'px';
+            }
+        }
+
+        window.addEventListener('resize', updateGameContainer);
+        window.addEventListener('orientationchange', () => {
+            setTimeout(updateGameContainer, 100);
+        });
+
         import OrientationHandler from './src/orientation-handler.js';
         
         const orientationHandler = new OrientationHandler('game-container');
@@ -189,6 +200,9 @@
         });
 
         checkOrientation();
+        
+        // Initial container update
+        updateGameContainer();
 
         const script = document.createElement('script');
         script.src = 'dist/bundle.js';
