--- a/mobile.html
+++ b/mobile.html
@@ -34,11 +34,11 @@
             background: #000;
         }
         #game-container {
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             overflow: hidden;
         }
         canvas {
@@ -46,10 +46,24 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 100% !important;
-            height: 100% !important;
-            object-fit: contain;
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+            aspect-ratio: 16/9;
             touch-action: none;
+        }
+        @media (orientation: landscape) and (max-aspect-ratio: 16/9) {
+            canvas {
+                width: 100% !important;
+                height: auto !important;
+            }
+        }
+        @media (orientation: landscape) and (min-aspect-ratio: 16/9) {
+            canvas {
+                width: auto !important;
+                height: 100% !important;
+            }
         }
         #rotation-prompt {
             display: none;
@@ -134,21 +148,6 @@
             }
         }
 
-        // Ensure game container fills the screen
-        function updateGameContainer() {
-            const gameContainer = document.getElementById('game-container');
-            const canvas = document.querySelector('canvas');
-            if (canvas) {
-                canvas.style.width = window.innerWidth + 'px';
-                canvas.style.height = window.innerHeight + 'px';
-            }
-        }
-
-        window.addEventListener('resize', updateGameContainer);
-        window.addEventListener('orientationchange', () => {
-            setTimeout(updateGameContainer, 100);
-        });
-
         import OrientationHandler from './src/orientation-handler.js';
         
         const orientationHandler = new OrientationHandler('game-container');
@@ -200,9 +199,6 @@
         });
 
         checkOrientation();
-        
-        // Initial container update
-        updateGameContainer();
 
         const script = document.createElement('script');
         script.src = 'dist/bundle.js';
